<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#333"
              android:orientation="vertical"
              tools:context="com.cloverrepublic.dietapp.MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="4"
            android:useDefaultMargins="false">

            <RelativeLayout
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_column="0"
                android:layout_margin="12dp"
                android:layout_row="0"
                android:onClick="onGeneralInformationClick"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/basics2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="4dp"
                    android:text="@string/DietBasicsHeader"
                    android:textColor="#fff"
                    android:textSize="14sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_column="1"
                android:layout_marginTop="12dp"
                android:layout_row="0"
                android:onClick="onWeightLossClick"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/diet2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="4dp"
                    android:text="@string/DietSlimHeader"
                    android:textColor="#fff"
                    android:textSize="14sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_column="0"
                android:layout_marginLeft="12dp"
                android:layout_row="1"
                android:onClick="onProteinClick"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/protein"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="4dp"
                    android:text="@string/DietProteinHeader"
                    android:textColor="#fff"
                    android:textSize="14sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_column="1"
                android:layout_row="1"
                android:onClick="onFatsClick"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/fats"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="4dp"
                    android:text="@string/DietFatsHeader"
                    android:textColor="#fff"
                    android:textSize="14sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_column="0"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_row="2"
                android:onClick="onHydrocarbonesClick"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/hydro"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="4dp"
                    android:text="@string/DietCarbohydratesHeader"
                    android:textColor="#fff"
                    android:textSize="14sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_column="1"
                android:layout_marginTop="12dp"
                android:layout_row="2"
                android:onClick="onBreakfastClick"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/breakfast"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="4dp"
                    android:text="@string/DietBreakfastHeader"
                    android:textColor="#fff"
                    android:textSize="14sp"/>

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_gravity="center_horizontal"
                android:onClick="onWinGymClick"
                android:text="@string/wingym"/>
        </GridLayout>

    </ScrollView>
</LinearLayout>
